# cms-mcp

./: .gitignore  README.md  pyproject.toml
docs/: auth-design.md  cms-api-catalog.json  cms-discovery.md  live-validation.md  mcp-readonly-implementation-plan.md  other-device-setup.md  runbook.md
scripts/: build-mcpb.sh  install-claude-code.sh  install-claude-desktop-mcpb.sh  setup-codex.sh
src/cms_mcp/: __init__.py  auth.py  auth_guard.py  browser_auth.py  claude_config.py  cli.py  client.py  codex_config.py  config.py  cookie_store.py  endpoints.py  errors.py  logging.py  mcpb_bundle.py  server.py  smoke.py
src/cms_mcp/tools/: __init__.py  ads_txt.py  common.py  dimensions.py  exports.py  health.py  inventories.py  mediation.py  reports.py  units.py  users.py
src/cms_mcp/utils/: __init__.py  redaction.py
tests/: test_auth.py  test_auth_guard.py  test_claude_config.py  test_cli.py  test_client.py  test_codex_config.py  test_config.py  test_cookie_store.py  test_dimensions.py  test_exports.py  test_inventories.py  test_mcpb_bundle.py  test_readonly_guard.py  test_reports.py  test_server.py  test_smoke.py
